# zkp-identity-auth-system

./: next.config.mjs  package-lock.json  package.json  tsconfig.json
age_generation_proof/: Cargo.toml
age_generation_proof/src/: lib.rs
oracle_service/: Cargo.toml
oracle_service/src/: main.rs
prisma/: schema.prisma
src/app/: page.tsx
src/app/about/: page.tsx
src/app/api/endpoint/: route.ts
src/app/auth/register/: page.tsx
src/client/: FrontID.ts  actions.ts  backID.ts  base64.ts  dataProcessing.ts  idVerification.ts  textFormating.ts
src/servers/: actions.ts  regex.ts
src/static/wasm/: age_generation_proof.js  age_generation_proof_bg.wasm  age_verification_proof.d.ts  age_verification_proof.js  age_verification_proof_bg.js  age_verification_proof_bg.wasm  age_verification_proof_bg.wasm.d.ts  package.json
third_party_auth_service/: README.md  package-lock.json  package.json
third_party_auth_service/prisma/: schema.prisma
third_party_auth_service/src/app/: globals.css  layout.tsx  page.tsx
third_party_auth_service/src/app/api/ageauth/: route.ts
third_party_auth_service/src/app/api/attestation/: route.ts
third_party_auth_service/src/app/api/auth/[...nextauth]/: route.ts
third_party_auth_service/src/app/api/proof/: route.ts
third_party_auth_service/src/app/api/publickey/: route.ts
third_party_auth_service/src/app/api/registration/: route.ts
third_party_auth_service/src/app/auth/login/: page.tsx
third_party_auth_service/src/app/dashboard/: page.tsx
third_party_auth_service/src/client/: backID.ts  dataProcessing.ts  frontID.ts  idVerification.ts  personalData.ts
third_party_auth_service/src/components/: button.tsx  client-portal.tsx  layout.tsx  toast.tsx
third_party_auth_service/src/hooks/: use-toast.ts
third_party_auth_service/src/internal/: generateKeys.js
third_party_auth_service/src/static/wasm/: age_generation_proof_bg.wasm  package.json
