[package]
name = "age_verification_proof"
version = "0.1.0"
authors = ["bartigarbacz@gmail.com"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

getrandom = { version = "0.2.14", features = ["js"] }
bellman = "0.14.0"
bls12_381 = "0.8.0"
ff = "0.13.0"
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.0"
serde_json = "1.0"
bit-vec = "0.6.3"
pairing = "0.23.0"
byteorder = "1"
concat-arrays = "0.1"
wasm-bindgen = "0.2.92"

[lib.profile.release]
crate-type = ["cdylib"]

#[dependencies.web-sys]
#version = "0.3.69"
#features = ["JsValue"]

#[dependencies.wasm-bindgen]
#version = "0.2.79"
#features = ["serde-serialize"]

#[build-dependencies]
#wasm-bindgen = "0.2.79"

#[profile.release]
#lto = true
#codegen-units = 1