[package]
name = "oracle_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum  = "0.7.5"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1.80"

bls12_381 = "0.8.0"
ff = "0.13.0"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.0"
serde_json = "1.0"
bit-vec = "0.6.3"
pairing = "0.23.0"
byteorder = "1"
concat-arrays = "0.1"
bellman = "0.14.0"
chrono = "0.4"